minion/minion.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: minion1
    app.kubernetes.io/name: opennms
    app.kubernetes.io/version: 0.1.0
    kubernetes.io/metadata.name: minion1
  name: minion1
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: Pod
metadata:
  name: minion
  namespace: minion1
  labels:
    app: minion1
    app.kubernetes.io/instance: minion1
    app.kubernetes.io/name: opennms
    app.kubernetes.io/version: 0.1.0
    kubernetes.io/metadata.name: minion1
spec:
  containers:
  - name: minion
    image: opennms/minion:29.0.5
    ports:
    - name: snmp
      containerPort: 1162
      protocol: UDP
    - name: minion
      containerPort: 80
      protocol: TCP
    volumeMounts:
    - mountPath: /opt/minion/minion-config.yaml
      name: minion-settings
      subPath: minion-config.yaml
    - mountPath: /etc/java/jks
      name: jks
  # May need an init container for the following:
  # /tmp/_minion-1-1644871378.yaml:/opt/minion/minion-config.yaml,
  # /Users/jaberry/Documents/research.onms-k8s-poc/onms-k8s-poc/jks/truststore.jks:/etc/java/jks/truststore.jks
  volumes:
  - configMap:
      defaultMode: 420
      name: app-settings
    name: minion-settings
  - name: jks
    secret:
      defaultMode: 420
      secretName: app-jks
---
apiVersion: v1
kind: Service
metadata:
  name: snmpnodeport
  namespace: minion1
  labels:
    app: minion1
    app.kubernetes.io/instance: minion1
    app.kubernetes.io/name: opennms
    app.kubernetes.io/version: 0.1.0
spec:
  clusterIP: None
  ports:
  - name: traps
    protocol: UDP
    port: 1162
    targetPort: snmp
  selector:
    app: minion1
    #app.kubernetes.io/instance: minion1
    #app.kubernetes.io/name: minion1
---
apiVersion: v1
kind: Service
metadata:
  name: snmp
  namespace: minion1
  labels:
    app: minion1
    app.kubernetes.io/instance: minion1
    app.kubernetes.io/name: opennms
    app.kubernetes.io/version: 0.1.0
spec:
  clusterIP: None
  ports:
  - name: traps
    protocol: UDP
    port: 1162
    targetPort: snmp
  selector:
    app: minion1
    #app.kubernetes.io/instance: minion1
    #app.kubernetes.io/name: minion1
